[gd_scene load_steps=3 format=3 uid="uid://chr6gddjw0l84"]

[ext_resource type="Script" path="res://scripts/win_area.gd" id="1_ob32f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3mqa"]
size = Vector2(50, 50)

[node name="WinArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_ob32f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n3mqa")

[node name="EnemyDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetect"]
shape = SubResource("RectangleShape2D_n3mqa")

[connection signal="body_entered" from="." to="." method="_on_player_entered"]
[connection signal="body_entered" from="EnemyDetect" to="." method="_on_enemy_entered"]
